Added chips page & inserted icon on pagination page

--- a/urbanstory/pages/components/pagination.html
+++ b/urbanstory/pages/components/pagination.html
@@ -6,47 +6,47 @@
         <div class="sub-section-pagination">
             <h5>Default</h5>
             <nav class="pagination">
-                <a href="#">&lt</a>
+                <a href="#"><i class="icon-angle-left"></i></a>
                 <a href="#">1</a>
                 <a href="#" class="active">2</a>
                 <a href="#">3</a>
                 <a href="#">4</a>
                 <a href="#">5</a>
-                <a href="#">&gt</a>
+                <a href="#"><i class="icon-angle-right"></i></a>
             </nav>
         </div>
         <div class="sub-section-pagination">
             <h5>Hovered</h5>
             <nav class="pagination">
-                <a href="#">&lt</a>
+                <a href="#"><i class="icon-angle-left"></i></a>
                 <a href="#">1</a>
                 <a href="#" class="hovered">2</a>
                 <a href="#">3</a>
                 <a href="#">4</a>
                 <a href="#">5</a>
-                <a href="#">&gt</a>
+                <a href="#"><i class="icon-angle-right"></i></a>
             </nav>
         </div>
         <div class="sub-section-pagination">
             <h5>Focus / clicked</h5>
             <nav class="pagination">
-                <a href="#">&lt</a>
+                <a href="#"><i class="icon-angle-left"></i></a>
                 <a href="#">1</a>
                 <a href="#" class="focused">2</a>
                 <a href="#">3</a>
                 <a href="#">4</a>
                 <a href="#">5</a>
-                <a href="#">&gt</a>
+                <a href="#"><i class="icon-angle-right"></i></a>
             </nav>
         </div>
         <pre><code>&lt;nav class=&quot;pagination&quot;&gt;
-    &lt;a href=&quot;#&quot;&gt;&amp;lt&lt;/a&gt;
+    &lt;a href=&quot;#&quot;&gt;&lt;i class=&quot;icon-angle-left&quot;&gt;&lt;/i&gt;&lt;/a&gt;
     &lt;a href=&quot;#&quot;&gt;1&lt;/a&gt;
     &lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;2&lt;/a&gt;
     &lt;a href=&quot;#&quot;&gt;3&lt;/a&gt;
     &lt;a href=&quot;#&quot;&gt;4&lt;/a&gt;
     &lt;a href=&quot;#&quot;&gt;5&lt;/a&gt;
-    &lt;a href=&quot;#&quot;&gt;&amp;gt&lt;/a&gt;
+    &lt;a href=&quot;#&quot;&gt;&lt;i class=&quot;icon-angle-right&quot;&gt;&lt;/i&gt;&lt;/a&gt;
 &lt;/nav&gt;</code></pre>
     </section>
 </div>
