--- a/urbanstory/src/css/sass/components/_variables.scss
+++ b/urbanstory/src/css/sass/components/_variables.scss
@@ -56,6 +56,7 @@ $icon-size: 14px;
 $br-height: 18px; // breadcrumb height
 $c-height: 40px;
 $label-height: 20px;
+$chip-height: 32px;
 
 $list-bg-color: rgba(39, 145, 217, 0.1);
 $pg-box-shadow-color: rgba(0, 0, 0, 0.1);
