--- a/urbanstory/src/css/sass/composer/style.scss
+++ b/urbanstory/src/css/sass/composer/style.scss
@@ -18,3 +18,4 @@
 @import "../components/list";
 @import "../components/breadcrumbs";
 @import "../components/pagination";
+@import "../components/chips";
