Fixed wrong source code on chips page

--- a/urbanstory/pages/components/chips.html
+++ b/urbanstory/pages/components/chips.html
@@ -32,25 +32,25 @@
         </div>
         <pre><code>&lt;div class=&quot;chip&quot;&gt;Plain chip&lt;/div&gt;
 &lt;div class=&quot;chip&quot;&gt;Chip with icon
-    &lt;button class=&quot;btn btn-flat btn-small&quot;&gt;&lt;i class=&quot;icon icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+    &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 &lt;div class=&quot;chip chip-dashed&quot;&gt;Chip dashed
-    &lt;button class=&quot;btn btn-flat btn-small&quot;&gt;&lt;i class=&quot;icon icon-plus&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+    &lt;button&gt;&lt;i class=&quot;icon-plus&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 &lt;div class=&quot;chip chip-firm&quot;&gt;Chip firm
-    &lt;button class=&quot;btn btn-flat btn-small&quot;&gt;&lt;i class=&quot;icon icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+    &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 &lt;div class=&quot;chip chip-success&quot;&gt;Chip success
-    &lt;button class=&quot;btn btn-flat btn-small&quot;&gt;&lt;i class=&quot;icon icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+    &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 &lt;div class=&quot;chip chip-danger&quot;&gt;Chip danger
-    &lt;button class=&quot;btn btn-flat btn-small&quot;&gt;&lt;i class=&quot;icon icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+    &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 &lt;div class=&quot;chip chip-warning&quot;&gt;Chip warning
-    &lt;button class=&quot;btn btn-flat btn-small&quot;&gt;&lt;i class=&quot;icon icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+    &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 &lt;div class=&quot;chip chip-median&quot;&gt;Chip median
-    &lt;button class=&quot;btn btn-flat btn-small&quot;&gt;&lt;i class=&quot;icon icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+    &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;</code></pre>
     </section>
 </div>
