Added slider page

--- a/urbanstory/src/css/sass/composer/style.scss
+++ b/urbanstory/src/css/sass/composer/style.scss
@@ -19,3 +19,4 @@
 @import "../components/breadcrumbs";
 @import "../components/pagination";
 @import "../components/chips";
+@import "../components/slider";
