--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -2213,4 +2213,46 @@ select {
   color: white;
 }
 
+/* Slider */
+#slider {
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  background: #d6d6d6;
+  border: none;
+  box-shadow: none;
+  height: 10px;
+  margin-bottom: 64px;
+}
+#slider .noUi-handle {
+  cursor: pointer;
+  background: white;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  border: 3px solid #011148;
+  width: 32px;
+  height: 32px;
+  top: -11px;
+  outline: none;
+}
+#slider .noUi-handle:before, #slider .noUi-handle:after {
+  height: 0;
+}
+#slider .noUi-connect {
+  background-color: #011148;
+}
+#slider .noUi-connects {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+#slider .noUi-tooltip {
+  color: #a3a3a3;
+  font-size: 14px;
+  bottom: -100%;
+  border: none;
+  padding: 0;
+}
+
 /*# sourceMappingURL=style.css.map */
