--- a/urbanstory/pages/components/slider.html
+++ b/urbanstory/pages/components/slider.html
@@ -3,40 +3,26 @@
         <h1>Slider</h1>
     </section>
     <section>
-        <div id="slider"></div>
-        <pre><code>&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/13.1.5/nouislider.min.css&quot; /&gt;
-&lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/13.1.5/nouislider.min.js&quot;&gt;&lt;/script&gt;
-&lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.1.0/wNumb.min.js&quot;&gt;&lt;/script&gt;
+        <h3>Default</h3>
+        <br>
+        <div class="range-slider">
+            <input type="range" min="1" max="100000000" step="100000" value="0" id="slider" oninput="onRangeChange()"
+                onchange="onRangeChange()">
+        </div>
+        <br>
+        <h3>Dual Slider</h3>
+        <br>
+        <div class="range-slider dual">
+            <input type="range" min="1" max="100000000" step="100000" value="0">
+            <input type="range" min="1" max="100000000" step="100000" value="99999999">
+        </div>
+        <pre><code>&lt;div class=&quot;range-slider&quot;&gt;
+    &lt;input type=&quot;range&quot; min=&quot;1&quot; max=&quot;100000000&quot; step=&quot;100000&quot; value=&quot;0&quot; id=&quot;slider&quot;&gt;
+    &lt;/div&gt;
 
-&lt;script&gt;
-$(document).ready(function () {
-    let slider = document.getElementById('slider');
-
-    noUiSlider.create(slider, {
-    animate: true,
-    animationDuration: 200,
-    tooltips: [wNumb({
-        decimals: 0,
-        thousand: '.',
-        prefix: 'Rp',
-        suffix: ',-'
-    }), wNumb({
-        decimals: 0,
-        thousand: '.',
-        prefix: 'Rp',
-        suffix: ',-'
-    })],
-        start: [9000000, 80000000],
-        connect: true,
-        range: {
-            'min': 0,
-            'max': 100000000
-        }
-    });
-});
-&lt;/script&gt;
-
-&lt;div id=&quot;slider&quot;&gt;&lt;/div&gt;
-</code></pre>
+&lt;div class=&quot;range-slider dual&quot;&gt;
+    &lt;input type=&quot;range&quot; min=&quot;1&quot; max=&quot;100000000&quot; step=&quot;100000&quot; value=&quot;0&quot;&gt;
+    &lt;input type=&quot;range&quot; min=&quot;1&quot; max=&quot;100000000&quot; step=&quot;100000&quot; value=&quot;99999999&quot;&gt;
+&lt;/div&gt;</code></pre>
     </section>
 </div>
