--- a/urbanstory/src/css/sass/components/_slider.scss
+++ b/urbanstory/src/css/sass/components/_slider.scss
@@ -1,41 +1,52 @@
 /* Slider */
-#slider {
-  @include border-radius(8px);
-  background: $c-grey-2;
-  border: none;
-  box-shadow: none;
-  height: 10px;
-  margin-bottom: $gutter-xxl;
+.range-slider {
+  width: 100%;
 
-  .noUi-handle {
-    cursor: pointer;
-    background: white;
-    @include border-radius(50%);
-    border: 3px solid $c-firm-1;
-    width: $chip-height;
-    height: $chip-height;
-    top: -11px;
+  input[type="range"] {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 10px;
+    background: linear-gradient(90deg, $c-firm-1 0, $c-grey-2 0);
     outline: none;
+    margin: 0;
+    padding: 0;
+    @include border-radius(8px);
+    @extend .transition;
 
-    &:before,
-    &:after {
-      height: 0;
+    &:hover {
+      opacity: 1;
+    }
+
+    &::-webkit-slider-thumb {
+      position: relative;
+      @include border-radius(50%);
+      -webkit-appearance: none;
+      appearance: none;
+      width: $chip-height;
+      height: $chip-height;
+      background: white;
+      border: 3px solid $c-firm-1;
+      cursor: pointer;
+      z-index: 1;
+    }
+
+    &::-moz-range-thumb {
+      @include border-radius(50%);
+      width: $chip-height;
+      height: $chip-height;
+      background: white;
+      border: 3px solid $c-firm-1;
+      cursor: pointer;
     }
   }
 
-  .noUi-connect {
-    background-color: $c-firm-1;
-  }
+  &.dual {
+    position: relative;
+    margin-bottom: 5rem;
 
-  .noUi-connects {
-    @include radius;
-  }
-
-  .noUi-tooltip {
-    color: $c-grey-4;
-    font-size: 14px;
-    bottom: -100%;
-    border: none;
-    padding: 0;
+    input[type="range"] {
+      position: absolute;
+      top: 0;
+    }
   }
 }
