--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -179,7 +179,7 @@ figcaption {
   font-style: italic;
 }
 
-.transition, .chip button i, .chip button, .pagination a, .breadcrumb a:hover, .breadcrumb a, .list a, .list.has-icon a:before, .uh-tab-nav .nav-item::before, .avatar, textarea,
+.transition, .range-slider input[type=range], .chip button i, .chip button, .pagination a, .breadcrumb a:hover, .breadcrumb a, .list a, .list.has-icon a:before, .uh-tab-nav .nav-item::before, .avatar, textarea,
 input[type=text],
 input[type=password],
 input[type=email],
@@ -2214,45 +2214,55 @@ select {
 }
 
 /* Slider */
-#slider {
+.range-slider {
+  width: 100%;
+}
+.range-slider input[type=range] {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  background: linear-gradient(90deg, #011148 0, #d6d6d6 0);
+  outline: none;
+  margin: 0;
+  padding: 0;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   border-radius: 8px;
-  background: #d6d6d6;
-  border: none;
-  box-shadow: none;
-  height: 10px;
-  margin-bottom: 64px;
 }
-#slider .noUi-handle {
-  cursor: pointer;
-  background: white;
+.range-slider input[type=range]:hover {
+  opacity: 1;
+}
+.range-slider input[type=range]::-webkit-slider-thumb {
+  position: relative;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-  border: 3px solid #011148;
+  -webkit-appearance: none;
+  appearance: none;
   width: 32px;
   height: 32px;
-  top: -11px;
-  outline: none;
+  background: white;
+  border: 3px solid #011148;
+  cursor: pointer;
+  z-index: 1;
 }
-#slider .noUi-handle:before, #slider .noUi-handle:after {
-  height: 0;
+.range-slider input[type=range]::-moz-range-thumb {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  background: white;
+  border: 3px solid #011148;
+  cursor: pointer;
 }
-#slider .noUi-connect {
-  background-color: #011148;
+.range-slider.dual {
+  position: relative;
+  margin-bottom: 5rem;
 }
-#slider .noUi-connects {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-}
-#slider .noUi-tooltip {
-  color: #a3a3a3;
-  font-size: 14px;
-  bottom: -100%;
-  border: none;
-  padding: 0;
+.range-slider.dual input[type=range] {
+  position: absolute;
+  top: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
