--- a/urbanstory/src/css/sass/composer/index.scss
+++ b/urbanstory/src/css/sass/composer/index.scss
@@ -369,3 +369,103 @@ code {
     margin-bottom: 81px;
   }
 }
+
+//Urbanicon
+.glyphs.character-mapping {
+    margin: 0 0 20px 0;
+    padding: 20px 0 20px 30px;
+    color: rgba(0, 0, 0, 0.5);
+    border: 1px solid #d8e0e5;
+    border-radius: 3px;
+}
+
+.glyphs.character-mapping li {
+    margin: 0 30px 20px 0;
+    display: inline-block;
+    width: 90px
+}
+
+.glyphs.character-mapping .icon {
+    margin: 10px 0 10px 15px;
+    padding: 15px;
+    position: relative;
+    width: 55px;
+    height: 55px;
+    color: #162a36 !important;
+    overflow: hidden;
+    border-radius: 3px;
+    font-size: 32px;
+}
+
+.glyphs.character-mapping .icon svg {
+    fill: #000
+}
+
+.glyphs.character-mapping input {
+    margin: 0;
+    padding: 5px 0;
+    line-height: 12px;
+    font-size: 12px;
+    display: block;
+    width: 100%;
+    border: 1px solid #d8e0e5;
+    border-radius: 5px;
+    text-align: center;
+    outline: 0;
+}
+
+.glyphs.character-mapping input:focus {
+    border: 1px solid #fbde4a;
+    -webkit-box-shadow: inset 0 0 3px #fbde4a;
+    box-shadow: inset 0 0 3px #fbde4a
+}
+
+.glyphs.character-mapping input:hover {
+    -webkit-box-shadow: inset 0 0 3px #fbde4a;
+    box-shadow: inset 0 0 3px #fbde4a
+}
+
+.glyphs.css-mapping {
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex: 0 1 auto;
+  -webkit-box-flex: 0;
+  flex: 0 1 auto;
+  -ms-flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  list-style-type:none;
+
+}
+
+.glyphs.css-mapping li {
+    margin: 0 30px 20px 0;
+    padding: 0;
+    // outline:solid 1px red;
+    
+}
+
+.glyphs.css-mapping .icon {
+    margin: 0;
+    margin-right: 10px;
+    padding:$gutter-m;
+    height: 40px;
+    width: 40px;
+    overflow: hidden;
+    float: left;
+    font-size: 24px;
+    -ms-flex: 0 0 auto;
+  -webkit-box-flex: 0;
+  flex: 0 0 auto;
+}
+
+.glyphs.css-mapping input {
+    max-width: 100px;
+}
