--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -2221,6 +2221,10 @@ select {
   -webkit-appearance: none;
   width: 100%;
   height: 10px;
+  background: -webkit-linear-gradient(left, #011148 0, #d6d6d6 0);
+  background: -moz-linear-gradient(left, #011148 0, #d6d6d6 0);
+  background: -o-linear-gradient(left, #011148 0, #d6d6d6 0);
+  background: -webkit-gradient(linear, left top, right top, color-stop(0, #011148), color-stop(0, #d6d6d6));
   background: linear-gradient(90deg, #011148 0, #d6d6d6 0);
   outline: none;
   margin: 0;
