--- a/urbanstory/pages/components/slider.html
+++ b/urbanstory/pages/components/slider.html
@@ -14,15 +14,15 @@
         <br>
         <div class="range-slider dual">
             <input type="range" min="0" max="100" step="1" value="5" oninput="lowerSlide()" id="lower">
-            <input type="range" min="0" max="100" step="1" value="45" oninput="upperSlide()" id="upper">
+            <input type="range" min="0" max="100" step="1" value="95" oninput="upperSlide()" id="upper">
         </div>
         <pre><code>&lt;div class=&quot;range-slider&quot;&gt;
     &lt;input type=&quot;range&quot; min=&quot;1&quot; max=&quot;100000000&quot; step=&quot;100000&quot; value=&quot;0&quot; id=&quot;slider&quot;&gt;
     &lt;/div&gt;
 
 &lt;div class=&quot;range-slider dual&quot;&gt;
-    &lt;input type=&quot;range&quot; min=&quot;1&quot; max=&quot;100000000&quot; step=&quot;100000&quot; value=&quot;0&quot;&gt;
-    &lt;input type=&quot;range&quot; min=&quot;1&quot; max=&quot;100000000&quot; step=&quot;100000&quot; value=&quot;99999999&quot;&gt;
+    &lt;input type=&quot;range&quot; min=&quot;0&quot; max=&quot;100&quot; step=&quot;1&quot; value=&quot;5&quot;&gt;
+    &lt;input type=&quot;range&quot; min=&quot;0&quot; max=&quot;100&quot; step=&quot;1&quot; value=&quot;95&quot;&gt;
 &lt;/div&gt;</code></pre>
     </section>
 </div>
