--- a/urbanstory/src/css/sass/components/_slider.scss
+++ b/urbanstory/src/css/sass/components/_slider.scss
@@ -58,5 +58,55 @@
       position: absolute;
       top: 0;
     }
+
+    #upper {
+      background: -webkit-gradient(
+        linear,
+        left top,
+        right top,
+        color-stop(0, $c-grey-2),
+        color-stop(1%, $c-grey-2),
+        color-stop(1%, $c-firm-1),
+        color-stop(1%, $c-firm-1),
+        color-stop(1%, $c-grey-2),
+        to($c-grey-2)
+      );
+      background: -webkit-linear-gradient(
+        left,
+        $c-grey-2 0,
+        $c-grey-2 1%,
+        $c-firm-1 1%,
+        $c-firm-1 1%,
+        $c-grey-2 1%,
+        $c-grey-2 100%
+      );
+      background: -moz-linear-gradient(
+        left,
+        $c-grey-2 0,
+        $c-grey-2 1%,
+        $c-firm-1 1%,
+        $c-firm-1 1%,
+        $c-grey-2 1%,
+        $c-grey-2 100%
+      );
+      background: -o-linear-gradient(
+        left,
+        $c-grey-2 0,
+        $c-grey-2 1%,
+        $c-firm-1 1%,
+        $c-firm-1 1%,
+        $c-grey-2 1%,
+        $c-grey-2 100%
+      );
+      background: linear-gradient(
+        90deg,
+        $c-grey-2 0,
+        $c-grey-2 1%,
+        $c-firm-1 1%,
+        $c-firm-1 1%,
+        $c-grey-2 1%,
+        $c-grey-2 100%
+      );
+    }
   }
 }
