--- a/urbanstory/src/css/sass/composer/urbanstory.scss
+++ b/urbanstory/src/css/sass/composer/urbanstory.scss
@@ -1,7 +1,7 @@
 /* Styles for guideline layout only */
 
-@import "../components-global/variables";
-@import "../components-global/mixin";
+@import "../global/variables";
+@import "../global/mixin";
 
 .page-hero {
   padding: 2em 0;
