--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -2286,6 +2286,121 @@ input[type=checkbox]:focus {
   background: linear-gradient(90deg, #d6d6d6 0, #d6d6d6 1%, #011148 1%, #011148 1%, #d6d6d6 1%, #d6d6d6 100%);
 }
 
+.card-header {
+  background: white;
+  height: 50px;
+  padding: 8px;
+  -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+}
+.card-header img {
+  max-height: 70px;
+  width: 20%;
+}
+
+.flex {
+  display: -webkit-box;
+  /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;
+  /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;
+  /* TWEENER - IE 10 */
+  display: -webkit-flex;
+  /* NEW - Chrome */
+  display: flex;
+  /* NEW, Spec - Opera 12.1, Firefox 20+ */
+}
+
+.ats-nav {
+  display: inline-flex;
+  justify-content: center;
+}
+
+.left-side, .right-side {
+  display: flex;
+  margin: 0 5px;
+  outline: 1px solid lightcoral;
+}
+
+.right-side {
+  right: 0;
+}
+
+.ats-header-menu {
+  list-style-type: none;
+  margin: 6px 5px;
+  padding: 0 0 0 10px;
+}
+
+.ats-header-sub-menu {
+  display: inline-block;
+  padding: 0 10px;
+  justify-content: center;
+}
+.ats-header-sub-menu a {
+  font-size: 0.875rem;
+  color: #1A1A1A;
+}
+.ats-header-sub-menu .icon-coin {
+  color: #ffce07;
+}
+.ats-header-sub-menu .icon-calendar-2 {
+  padding: 0 10px;
+}
+.ats-header-sub-menu span {
+  margin: 0px 5px;
+}
+
+.ats-header-content {
+  display: inline-flex;
+}
+
+.company-name {
+  display: inline-block;
+  white-space: nowrap;
+  width: 150px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#ats-menu-button {
+  position: relative;
+  cursor: pointer;
+  padding: 10px;
+}
+
+#ats-menu-button span {
+  background: black;
+  display: block;
+  width: 20px;
+  height: 2px;
+  position: relative;
+  left: 10px;
+  border-radius: 1px;
+  transition: transform 0.2s ease-in-out;
+}
+
+#ats-menu-button span::after, #ats-menu-button span::before {
+  display: block;
+  content: "";
+  width: 20px;
+  height: 2px;
+  background: black;
+  border-radius: 1px;
+  position: absolute;
+  left: 0;
+  transition: transform 0.2s ease-in-out;
+}
+
+#ats-menu-button span::before {
+  top: 7px;
+}
+
+#ats-menu-button span::after {
+  top: -7px;
+}
+
 .uh-img-showcase img {
   background: #FFFFFF;
   -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 10px 20px 0 rgba(0, 0, 0, 0.1);
